   made to make it fit.
-- Draw a progress bar on the terminal by inversing colors behind status
   line.
-- Rework the format of the status line to be more compact and consistent.
-- Rework smart tag printout for adapting to terminal width.
-- Warning messages also start with a line break now to better fit in with
   verbose playback.
-- Reporting of clipped samples also includes a line break now.
- Default for --preload now is 0.2 instead of 1 (fill whole buffer before
  playback). The maximum is 0.5 . This is mandated by corrected buffer
  interaction in libout123.
- Improved interaction with buffer process in terminal control mode.
  Seeking is more transparent now, taking dropped samples from buffer into
  account to avoid unintended jumps. Direct seeks with number row do not
  pause playback anymore.
- Silently skip APE tags (thanks to Hans de Goede).
- Some reduction in bitrot on AIX (typos in output module, build with
  --disable-largefile --with-audio=aix, real test welcome).
- Added '[' and ']' keys to skip to previous/next directory in playlist.
- Added support for Haiku to configure script (thanks to Jerome Duval).
- Remove spurious Frankenstein warning when scanning files that have no
  gapless info (the reported value of -1152 gapless sample length should be
  a giveaway anyway).
- Fix a bug in the command line parser that was present from the beginning,
  apparently, causing certain parameters (--au, --cdr) to kill off parsing
  of following ones. Nobody complained in all these years. Astounding.
- Forget content type from HTTP redirects (relate to error pages, not the
  stream redirected to), fixes web radio streams that do not send any
  content type for the actual stream.
- Accept application/pls+xml for PLS playlists. It happens. Don't ask
  mpg123 to actually parse any XML!
- Ignore whitespace after HTTP MIME types (esp. before a ";").
- Added --name to mpg123 and out123 for providing client name p.ex. for JACK.